# Atlas

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFAULT_INIT_VERIFICATION.md  README.md  test_default_init.txt  test_install.sh  validate_ci.sh
examples/fetchcontent_example/: CMakeLists.txt  README.md  main.cpp  test_cmake_config.sh
examples/helpers_basic_example/: CMakeLists.txt  Handle.hpp  Price.hpp  UserId.hpp  main.cpp
examples/helpers_file_example/: CMakeLists.txt  main.cpp  types.atlas  types.txt
examples/helpers_inline_example/: CMakeLists.txt  main.cpp
src/lib/atlas/: AtlasCommandLine.cpp  AtlasCommandLine.hpp  AtlasMain.cpp  AtlasMain.hpp  AtlasParser.cpp  AtlasParser.hpp  AtlasUtilities.cpp  AtlasUtilities.hpp  CMakeLists.txt  InteractionGenerator.cpp  InteractionGenerator.hpp  ProfileSystem.cpp  ProfileSystem.hpp  SHA1Hasher.cpp  SHA1Hasher.hpp  StrongTypeDescriptionBoostDescribe.hpp  StrongTypeGenerator.cpp  StrongTypeGenerator.hpp  TemplateSystem.cpp  TemplateSystem.hpp  TokenToHeaderMapper.cpp  TokenToHeaderMapper.hpp  TypeTokenizer.cpp  TypeTokenizer.hpp  version.hpp
src/lib/atlas/generation/core/: ClassInfo.cpp  ClassInfo.hpp  GuardGenerator.cpp  GuardGenerator.hpp  ITemplate.cpp  ITemplate.hpp  MainTemplate.cpp  MainTemplate.hpp  TemplateOrchestrator.cpp  TemplateOrchestrator.hpp  TemplateRegistry.cpp  TemplateRegistry.hpp
src/lib/atlas/generation/features/: ConstantTemplate.cpp  ConstantTemplate.hpp  ForwardedMemfnTemplate.cpp  ForwardedMemfnTemplate.hpp  IteratorSupportTemplate.cpp  IteratorSupportTemplate.hpp  TemplateAssignmentOperator.cpp  TemplateAssignmentOperator.hpp
src/lib/atlas/generation/parsing/: OperatorParser.cpp  OperatorParser.hpp
src/lib/atlas/generation/specializations/: FormatterSpecialization.cpp  FormatterSpecialization.hpp  HashSpecialization.cpp  HashSpecialization.hpp
tests/: CMakeLists.txt  CodeStructureParser.cpp  CodeStructureParser.hpp  TestUtilities.hpp  arithmetic_modes_runtime_ut.cpp  arithmetic_modes_test_input.txt  atlas_command_line_ut.cpp  atlas_main_ut.cpp  atlas_tool_ut.cpp  bounded_constraint.txt  bounded_constraint_ut.cpp  bounded_range_constraint_ut.cpp  cast_ut.cpp  compilation_support.hpp  compilation_ut.cpp  constraint_integration2_test_types.atlas  constraint_integration2_test_types.txt  constraint_integration2_ut.cpp  constraint_integration_test_types.atlas  constraint_integration_test_types.txt  constraint_integration_ut.cpp  doctest.hpp  error_handling_ut.cpp  error_test_support.hpp  error_ut.cpp  example_improved_tests.cpp  generated_code_ut.cpp  golden_ut.cpp  integration_ut.cpp  interaction_compilation_ut.cpp  interaction_generator_ut.cpp  nested_type_size_test_types.atlas  nested_type_size_ut.cpp  nilable_cpp20_test_types.atlas  nilable_cpp20_ut.cpp  nilable_test_types.atlas  nilable_ut.cpp  non_empty_constraint.txt  non_empty_constraint_ut.cpp  non_negative_constraint.txt  (+21 more)
tests/fixtures/golden/command-line/: basic-int.cmdline  basic-int.expected
tests/fixtures/golden/integration/: combined-features.expected  combined-features.input  comparison-sort.expected  comparison-sort.input  formatter-format.expected  formatter-format.input  hash-unordered-map.expected  hash-unordered-map.input  inline-name-syntax.expected  inline-name-syntax.input  iterable-range-for.expected  iterable-range-for.input  odr-violation-type1.expected  odr-violation-type1.input  odr-violation-type2.expected  odr-violation-type2.input  odr-violation-type3.expected  odr-violation-type3.input  profile-deduplication.expected  profile-deduplication.input  profile-multiple.expected  profile-multiple.input  profile-simple.expected  profile-simple.input  profile-with-extras.expected  profile-with-extras.input  profile-with-forwarding.expected  profile-with-forwarding.input  spaceship-set.expected  spaceship-set.input  stream-stringstream.expected  stream-stringstream.input
tests/fixtures/golden/interactions/: basic-binary-compound.expected  basic-binary-compound.input  bitwise-operators-focused.expected  bitwise-operators-focused.input  bitwise-shift-operators.expected  bitwise-shift-operators.input  constexpr-vs-no-constexpr.expected  constexpr-vs-no-constexpr.input  cpp14-standard.expected  cpp14-standard.input  cpp17-standard.expected  cpp17-standard.input  cpp20-standard.expected  cpp20-standard.input  cpp23-standard.expected  cpp23-standard.input  dual-constraint-template.expected  dual-constraint-template.input  enable-if-only-template.expected  enable-if-only-template.input  includes-directive.expected  includes-directive.input  modulo-operator.expected  modulo-operator.input  multiple-interactions.expected  multiple-interactions.input  namespace-handling.expected  namespace-handling.input  per-operand-value-access.expected  per-operand-value-access.input  primitive-lhs-interaction.expected  primitive-lhs-interaction.input  rhs-atlas-value-generation.expected  rhs-atlas-value-generation.input  symmetric-interaction.expected  symmetric-interaction.input  template-type-interaction.expected  template-type-interaction.input  value-access-fallback.expected  value-access-fallback.input
tests/fixtures/golden/strong-types/arithmetic-modes/: checked-basic.expected  checked-basic.input  checked-float.expected  checked-float.input  checked-multi-type.expected  checked-multi-type.input  checked-unsigned.expected  checked-unsigned.input  saturating-basic.expected  saturating-basic.input  saturating-divide.expected  saturating-divide.input  saturating-mult-div.expected  saturating-mult-div.input  saturating-multiply.expected  saturating-multiply.input  saturating-signed.expected  saturating-signed.input  wrapping-basic.expected  wrapping-basic.input
tests/fixtures/golden/strong-types/cast-operators/: bool-conversion.expected  bool-conversion.input  const-reference.expected  const-reference.input  explicit-cast-alias.expected  explicit-cast-alias.input  explicit-multiple.expected  explicit-multiple.input  explicit-single-int.input  (+9 more)
tests/tools/: update_goldens.sh  verify_goldens.sh
(+339 files in other folders)
